Bug 160016 - Inserted GIF flipped vertically; previews in Gallery and Fontwork dialog flipped or mangled
Summary: Inserted GIF flipped vertically; previews in Gallery and Fontwork dialog flip...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Image-Handling Gallery FontWork-WordArt
  Show dependency treegraph
 
Reported: 2024-03-04 05:07 UTC by Stéphane Guillou (stragu)
Modified: 2024-04-19 09:38 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample ODP (1.55 MB, application/vnd.oasis.opendocument.presentation)
2024-03-04 05:07 UTC, Stéphane Guillou (stragu)
Details
sample ODP with gif that shows another issue (5.29 MB, application/vnd.oasis.opendocument.presentation)
2024-03-04 05:19 UTC, Stéphane Guillou (stragu)
Details
The Gallery sidebar (195.84 KB, image/png)
2024-03-06 14:35 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2024-03-04 05:07:58 UTC
Created attachment 192926 [details]
sample ODP

GIF image in attachment is flipped vertically when opened with a recent trunk build:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 709866a3b8e073fab4937dcf91dcd33ff1d2bc13
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Bibisected with linux-64-24.8 to first bad build [2fcb5f0c18082bcae763de6a886b718bc288512c] which points to:

commit 6588c30ed4477627b2623560ca867682b189bc80
author	Tomaž Vajngerl 	Mon Feb 26 21:45:35 2024 +0900
committer	Tomaž Vajngerl 	Thu Feb 29 16:12:18 2024 +0100
vcl: separate scanline direction from ScanlineFormat
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163943

Quikee, can you please have a look?
Comment 1 Stéphane Guillou (stragu) 2024-03-04 05:09:47 UTC
File doesn't need to have been created with a previous version.
Simply inserting attachment 186976 [details] into a presentation reproduced it.
Comment 2 Stéphane Guillou (stragu) 2024-03-04 05:19:42 UTC
Created attachment 192927 [details]
sample ODP with gif that shows another issue

From same commit: many green and transparent pixels in this sample.
Comment 3 Regina Henschel 2024-03-04 18:09:23 UTC
I have a current developer build from today and see no problems with these gif images. It is a build on Windows and without Skia.
Comment 4 Gabor Kelemen (Collabora) 2024-03-06 14:35:15 UTC
Created attachment 192994 [details]
The Gallery sidebar

I see the same issue with the Gallery sidebars images, bibisect on Linux pointed to the same commit.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 806362b915ee89a4f907905a8ac8c1527ea99223
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 5 Stéphane Guillou (stragu) 2024-03-19 12:21:35 UTC
Image inserted into Writer shows same issue.
Gallery affected in all components.
However, no repro on Windows 11.

Setting to high - major as it's a regression that affects both image display and Gallery previews in all components.
Comment 6 Stéphane Guillou (stragu) 2024-03-27 07:00:31 UTC
Also affects the Fontwork previews.
Same with gen VCL plugin.
Comment 7 Xisco Faulí 2024-04-17 08:53:56 UTC
https://gerrit.libreoffice.org/c/core/+/166170 should fix it
Comment 8 Commit Notification 2024-04-18 12:12:22 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/92edab3d95ff5ee8a81a453b3224157839dfd32c

tdf#160016 tdf#160704 Set the direction from src in StretchAndConvert

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2024-04-19 08:30:02 UTC
Verified in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8df17c340193c89549d8c563b04d015156afa3fb
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Tomaz, should this issue be closed as RESOLVED FIXED ?
Comment 10 Stéphane Guillou (stragu) 2024-04-19 09:38:38 UTC
Tested with my own build:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 75fe059974dcb80c3f78110c73ab799afc6f4ca3
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

- attachment 192926 [details] looks good
- attachment 192927 [details] looks good
- Gallery looks good
- Fontworks look good

Thanks Quikee and Xisco!