tdf#160016 tdf#160704 Set the direction from src in StretchAndConvert

The direction of the BitmapBuffer was never set, so it defaulted
to BottomUp. The best is to set the direction to be the same as
source - It's unlikely they would be different.

Regression from 6588c30ed4477627b2623560ca867682b189bc80
"vcl: separate scanline direction from ScanlineFormat"

Change-Id: I0e02106309141d09160defee0a0d72d34642a6ea
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166182
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>